--- a/package.json
+++ b/package.json
@@ -13,10 +13,12 @@
   "devDependencies": {
     "@types/express": "^4.17.13",
     "nodemon": "^2.0.15",
+    "prisma": "^3.8.1",
     "ts-node": "^10.4.0",
     "typescript": "^4.5.5"
   },
   "dependencies": {
+    "@prisma/client": "^3.8.1",
     "dotenv": "^14.3.2",
     "express": "^4.17.2"
   }
