--- a/client/package.json
+++ b/client/package.json
@@ -13,13 +13,12 @@
     "@types/react-dom": "^17.0.11",
     "@types/react-redux": "^7.1.22",
     "axios": "^0.25.0",
-    "ethers": "^5.5.4",
     "react": "^17.0.2",
     "react-dom": "^17.0.2",
     "react-redux": "^7.2.6",
     "react-router-dom": "^6.2.1",
     "react-scripts": "5.0.0",
-    "sass": "^1.49.4",
+    "tailwindcss": "^3.0.18",
     "typescript": "^4.5.5",
     "web-vitals": "^2.1.0"
   },
