--- a/client/package.json
+++ b/client/package.json
@@ -12,7 +12,9 @@
     "@types/react": "^17.0.38",
     "@types/react-dom": "^17.0.11",
     "@types/react-redux": "^7.1.22",
+    "autoprefixer": "^10.4.2",
     "axios": "^0.25.0",
+    "postcss": "^8.4.6",
     "react": "^17.0.2",
     "react-dom": "^17.0.2",
     "react-redux": "^7.2.6",
