--- a/package.json
+++ b/package.json
@@ -26,6 +26,6 @@
     "ethers": "^5.5.3",
     "express": "^4.17.2",
     "ws": "^8.4.2",
-    "xpnet-web3-contracts": "git@github.com:XP-NETWORK/XP.network-HECO-Migration.git"
+    "xpnet-web3-contracts": "git+https://github.com/XP-NETWORK/XP.network-HECO-Migration.git"
   }
 }
