--- a/package.json
+++ b/package.json
@@ -22,6 +22,8 @@
   "dependencies": {
     "@prisma/client": "^3.8.1",
     "@taquito/taquito": "^11.1.0",
+    "@types/cors": "^2.8.12",
+    "cors": "^2.8.5",
     "dotenv": "^14.3.2",
     "ethers": "^5.5.3",
     "express": "^4.17.2",
