--- a/package.json
+++ b/package.json
@@ -20,7 +20,8 @@
     "typescript": "^4.5.5"
   },
   "dependencies": {
-    "@prisma/client": "^3.8.1",
+    "@mikro-orm/core": "^4.5.10",
+    "@mikro-orm/mongodb": "^4.5.10",
     "@taquito/taquito": "^11.1.0",
     "@types/cors": "^2.8.12",
     "cors": "^2.8.5",
