remove prestart script

--- a/package.json
+++ b/package.json
@@ -4,10 +4,9 @@
   "description": "",
   "main": "index.js",
   "scripts": {
-    "start": "ts-node src/index.ts",
+    "start": "node build/index.ts",
     "dev": "nodemon src/index.ts",
-    "build": "tsc",
-    "prestart": "npm run build"
+    "build": "tsc"
   },
   "author": "Rishabh Kumar",
   "devDependencies": {
