--- a/package.json
+++ b/package.json
@@ -26,6 +26,7 @@
     "dotenv": "^14.3.2",
     "ethers": "^5.5.3",
     "express": "^4.17.2",
+    "socket.io-client": "^4.4.1",
     "ts-node": "^10.4.0",
     "typescript": "^4.5.5",
     "ws": "^8.4.2",
