--- a/package.json
+++ b/package.json
@@ -30,6 +30,6 @@
     "ts-node": "^10.4.0",
     "typescript": "^4.5.5",
     "ws": "^8.4.2",
-    "xpnet-web3-contracts": "git+https://github.com/XP-NETWORK/XP.network-HECO-Migration.git"
+    "xpnet-web3-contracts": "git+https://github.com/XP-NETWORK/XP.network-HECO-Migration.git#dist-erc1155"
   }
 }
