--- a/package.json
+++ b/package.json
@@ -29,6 +29,7 @@
     "express": "^4.17.2",
     "js-base64": "^3.7.2",
     "moment": "^2.29.1",
+    "node-cron": "^3.0.0",
     "socket.io": "^4.4.1",
     "socket.io-client": "^4.4.1",
     "ts-node": "^10.4.0",
