--- a/package.json
+++ b/package.json
@@ -27,6 +27,7 @@
     "dotenv": "^14.3.2",
     "ethers": "^5.5.3",
     "express": "^4.17.2",
+    "google-spreadsheet": "^3.2.0",
     "js-base64": "^3.7.2",
     "moment": "^2.29.1",
     "node-cron": "^3.0.0",
