--- a/package.json
+++ b/package.json
@@ -31,6 +31,7 @@
     "js-base64": "^3.7.2",
     "moment": "^2.29.1",
     "node-cron": "^3.0.0",
+    "sib-api-v3-sdk": "^8.2.1",
     "socket.io": "^4.4.1",
     "socket.io-client": "^4.4.1",
     "ts-node": "^10.4.0",
