--- a/package.json
+++ b/package.json
@@ -24,6 +24,7 @@
     "axios": "^0.26.0",
     "bignumber.js": "^9.0.2",
     "cors": "^2.8.5",
+    "csv-stringify": "^6.0.5",
     "dotenv": "^14.3.2",
     "ethers": "^5.5.3",
     "express": "^4.17.2",
