--- a/package.json
+++ b/package.json
@@ -19,7 +19,9 @@
   "dependencies": {
     "@mikro-orm/core": "^4.5.10",
     "@mikro-orm/mongodb": "^4.5.10",
-    "@taquito/taquito": "^11.1.0",
+    "@taquito/rpc": "^12.0.0",
+    "@taquito/taquito": "^11.2.0",
+    "@taquito/utils": "^12.0.0",
     "@types/cors": "^2.8.12",
     "axios": "^0.26.0",
     "bignumber.js": "^9.0.2",
