--- a/package.json
+++ b/package.json
@@ -22,6 +22,7 @@
     "@taquito/rpc": "^12.0.0",
     "@taquito/taquito": "^11.2.0",
     "@taquito/utils": "^12.0.0",
+    "@types/bson": "^4.2.0",
     "@types/cors": "^2.8.12",
     "algosdk": "^1.15.0",
     "axios": "^0.26.0",
