--- a/package.json
+++ b/package.json
@@ -5,7 +5,7 @@
   "main": "index.js",
   "scripts": {
     "start": "node build/index.js",
-    "dev": "nodemon src/index.ts",
+    "dev": "tsc && nodemon src/index.ts",
     "build": "tsc"
   },
   "author": "Rishabh Kumar",
