--- a/package.json
+++ b/package.json
@@ -6,13 +6,19 @@
   "scripts": {
     "start": "node build/index.js",
     "dev": "tsc && nodemon src/index.ts",
-    "build": "tsc"
+    "build": "tsc",
+    "lint": "eslint .",
+    "lint-fix": "yarn lint -- --fix"
   },
   "author": "Rishabh Kumar",
   "devDependencies": {
     "@types/express": "^4.17.13",
     "@types/js-base64": "^3.3.1",
     "@types/ws": "^8.2.2",
+    "@typescript-eslint/eslint-plugin": "^5.25.0",
+    "@typescript-eslint/parser": "^5.25.0",
+    "eslint": "^8.16.0",
+    "eslint-plugin-import": "^2.26.0",
     "nodemon": "^2.0.15",
     "prisma": "^3.8.1"
   },
@@ -24,6 +30,7 @@
     "@taquito/utils": "^12.0.0",
     "@types/bson": "^4.2.0",
     "@types/cors": "^2.8.12",
+    "@types/google-spreadsheet": "^3.2.2",
     "algosdk": "^1.15.0",
     "axios": "^0.26.0",
     "bignumber.js": "^9.0.2",
