--- a/package.json
+++ b/package.json
@@ -17,12 +17,13 @@
     "prisma": "^3.8.1"
   },
   "dependencies": {
-    "@elrondnetwork/erdjs": "9.2.4",
+    "@elrondnetwork/erdjs": "^10.2.5",
     "@mikro-orm/core": "^4.5.10",
     "@mikro-orm/mongodb": "^4.5.10",
     "@taquito/rpc": "^12.0.0",
-    "@taquito/taquito": "^11.2.0",
+    "@taquito/taquito": "^12.1.1",
     "@taquito/utils": "^12.0.0",
+    "@temple-wallet/dapp": "^7.0.0",
     "@types/cors": "^2.8.12",
     "algosdk": "^1.15.0",
     "axios": "^0.26.0",
@@ -30,11 +31,12 @@
     "cors": "^2.8.5",
     "csv-stringify": "^6.0.5",
     "dotenv": "^14.3.2",
-    "ethers": "^5.5.3",
+    "ethers": "^5.6.7",
     "express": "^4.17.2",
     "google-spreadsheet": "^3.2.0",
     "js-base64": "^3.7.2",
     "moment": "^2.29.1",
+    "mongoose": "^6.3.4",
     "node-cron": "^3.0.0",
     "sib-api-v3-sdk": "^8.2.1",
     "socket.io": "^4.4.1",
