--- a/package.json
+++ b/package.json
@@ -24,6 +24,7 @@
     "@taquito/taquito": "^11.2.0",
     "@taquito/utils": "^12.0.0",
     "@types/cors": "^2.8.12",
+    "@types/node-cron": "^3.0.1",
     "algosdk": "^1.15.0",
     "axios": "^0.26.0",
     "bignumber.js": "^9.0.2",
