--- a/package.json
+++ b/package.json
@@ -5,7 +5,7 @@
   "main": "index.js",
   "scripts": {
     "start": "node build/index.js",
-    "dev": "nodemon src/index.ts",
+    "dev": "tsc && nodemon src/index.ts",
     "build": "tsc"
   },
   "author": "Rishabh Kumar",
@@ -28,6 +28,7 @@
     "algosdk": "^1.15.0",
     "axios": "^0.26.0",
     "bignumber.js": "^9.0.2",
+    "bottleneck": "^2.19.5",
     "cors": "^2.8.5",
     "csv-stringify": "^6.0.5",
     "dotenv": "^14.3.2",
@@ -40,6 +41,7 @@
     "sib-api-v3-sdk": "^8.2.1",
     "socket.io": "^4.4.1",
     "socket.io-client": "^4.4.1",
+    "tronweb": "^4.2.0",
     "ts-node": "^10.4.0",
     "typescript": "^4.5.5",
     "ws": "^8.4.2",
