--- a/tsconfig.json
+++ b/tsconfig.json
@@ -9,5 +9,10 @@
     "skipLibCheck": true,
     "experimentalDecorators": true,
     "emitDecoratorMetadata": true
-  }
+  },
+  "exclude": [
+    "node_modules",
+    "lib",
+    "build"
+    ]
 }
