--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
   "dependencies": {
     "@elrondnetwork/erdjs": "9.2.4",
     "@elrondnetwork/transaction-decoder": "^0.1.0",
+    "@microsoft/signalr": "^7.0.0-preview.4.22251.1",
     "@mikro-orm/core": "^4.5.10",
     "@mikro-orm/mongodb": "^4.5.10",
     "@taquito/rpc": "^12.0.0",
