--- a/package.json
+++ b/package.json
@@ -32,6 +32,8 @@
     "@types/cors": "^2.8.12",
     "@types/node-cron": "^3.0.1",
     "@types/web3": "^1.2.2",
+    "@vechain/connex-driver": "^2.0.10",
+    "@vechain/connex-framework": "^2.0.10",
     "algosdk": "^1.15.0",
     "axios": "^0.26.0",
     "bignumber.js": "^9.0.2",
